fixed stretching backgrounds

--- a/final/src/app/register/register.component.scss
+++ b/final/src/app/register/register.component.scss
@@ -102,6 +102,7 @@
   height: 100vh;
   width: 100vw;
   background-image: url("../../assets/images/theatre-seats.jpg");
+  background-size: cover;
   font-family: "Roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
